[gd_scene load_steps=18 format=3 uid="uid://cfhwywy2f5fv2"]

[ext_resource type="Script" path="res://scenes/UI/spell_selection_scene1.gd" id="1_cytnc"]
[ext_resource type="Texture2D" uid="uid://b7xn4t4ipqkwn" path="res://scenes/UI/icons/airburst_icon.png" id="2_1x2gn"]
[ext_resource type="Texture2D" uid="uid://c0vrsr15kh4kj" path="res://scenes/UI/icons/firestream_icon.png" id="2_5n46m"]
[ext_resource type="Script" path="res://scenes/UI/Label.gd" id="2_gohyj"]
[ext_resource type="Texture2D" uid="uid://m7m8cu4meb0u" path="res://scenes/UI/icons/fireburst_icon.png" id="2_qrvll"]
[ext_resource type="Texture2D" uid="uid://cjylgblaahhky" path="res://scenes/UI/icons/waterstream_icon.png" id="4_1ij27"]
[ext_resource type="Texture2D" uid="uid://d3ms06jgmqx4p" path="res://scenes/UI/icons/icespikefrombelow_icon.png" id="4_sks7f"]
[ext_resource type="Texture2D" uid="uid://bg0xywrdvmwc3" path="res://scenes/UI/icons/lightningstream_icon.png" id="6_lcjy5"]
[ext_resource type="Texture2D" uid="uid://urugwqedoy4x" path="res://scenes/UI/icons/icespear_icon.png" id="8_amshf"]
[ext_resource type="Texture2D" uid="uid://f7cfmenq1a57" path="res://scenes/UI/icons/heal_icon.png" id="9_y68u0"]
[ext_resource type="Texture2D" uid="uid://bld24qyl55ogi" path="res://scenes/UI/icons/explosion_icon.png" id="10_p6d2a"]
[ext_resource type="Texture2D" uid="uid://c72kn6qpntjuw" path="res://scenes/UI/icons/earthspike_icon.png" id="11_fq4pq"]
[ext_resource type="Texture2D" uid="uid://cdf2t7suii06s" path="res://scenes/UI/icons/earthwall_icon.png" id="12_xdpt4"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_bjxp3"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pa4af"]

[sub_resource type="Theme" id="Theme_d3c2y"]

[sub_resource type="Theme" id="Theme_gais0"]

[node name="spell_selection_page" type="CanvasLayer"]
script = ExtResource("1_cytnc")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.0784314)
position = Vector2(642.5, 352.5)
scale = Vector2(1435, 805)
texture = SubResource("PlaceholderTexture2D_bjxp3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="spell_select_buttons" type="Node2D" parent="Control"]

[node name="spell1" type="Button" parent="Control/spell_select_buttons"]
offset_left = 200.0
offset_top = 75.0
offset_right = 300.0
offset_bottom = 175.0

[node name="spell1_sprite" type="Sprite2D" parent="Control/spell_select_buttons/spell1"]

[node name="spell2" type="Button" parent="Control/spell_select_buttons"]
offset_left = 325.0
offset_top = 75.0
offset_right = 425.0
offset_bottom = 175.0

[node name="spell2_sprite" type="Sprite2D" parent="Control/spell_select_buttons/spell2"]

[node name="spell3" type="Button" parent="Control/spell_select_buttons"]
offset_left = 450.0
offset_top = 75.0
offset_right = 550.0
offset_bottom = 175.0

[node name="spell3_sprite" type="Sprite2D" parent="Control/spell_select_buttons/spell3"]

[node name="spell4" type="Button" parent="Control/spell_select_buttons"]
offset_left = 575.0
offset_top = 75.0
offset_right = 675.0
offset_bottom = 175.0

[node name="spell4_sprite" type="Sprite2D" parent="Control/spell_select_buttons/spell4"]

[node name="spell5" type="Button" parent="Control/spell_select_buttons"]
offset_left = 700.0
offset_top = 75.0
offset_right = 800.0
offset_bottom = 175.0

[node name="spell5_sprite" type="Sprite2D" parent="Control/spell_select_buttons/spell5"]

[node name="spell_buttons" type="Node2D" parent="Control"]

[node name="airburst" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 100.0
offset_top = 75.0
offset_right = 200.0
offset_bottom = 175.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/airburst"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("2_1x2gn")

[node name="firestream" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 225.0
offset_top = 75.0
offset_right = 325.0
offset_bottom = 175.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/firestream"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("2_5n46m")

[node name="icespikefrombelow" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 350.0
offset_top = 75.0
offset_right = 450.0
offset_bottom = 175.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/icespikefrombelow"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("4_sks7f")

[node name="waterstream" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 475.0
offset_top = 75.0
offset_right = 575.0
offset_bottom = 175.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/waterstream"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("4_1ij27")

[node name="fireburst" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 600.0
offset_top = 75.0
offset_right = 700.0
offset_bottom = 175.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/fireburst"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("2_qrvll")

[node name="lightningstream" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 100.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 300.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/lightningstream"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("6_lcjy5")

[node name="icespear" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 225.0
offset_top = 200.0
offset_right = 325.0
offset_bottom = 300.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/icespear"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("8_amshf")

[node name="heal" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 350.0
offset_top = 200.0
offset_right = 450.0
offset_bottom = 300.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/heal"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("9_y68u0")

[node name="explosion" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 475.0
offset_top = 200.0
offset_right = 575.0
offset_bottom = 300.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/explosion"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("10_p6d2a")

[node name="earthspike" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 600.0
offset_top = 200.0
offset_right = 700.0
offset_bottom = 300.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/earthspike"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("11_fq4pq")

[node name="earthwall" type="Button" parent="Control/spell_buttons"]
visible = false
offset_left = 100.0
offset_top = 325.0
offset_right = 200.0
offset_bottom = 425.0
disabled = true

[node name="icon" type="Sprite2D" parent="Control/spell_buttons/earthwall"]
visible = false
texture_filter = 1
position = Vector2(50, 50)
scale = Vector2(3, 3)
texture = ExtResource("12_xdpt4")

[node name="Sprite2D" type="Sprite2D" parent="Control"]
visible = false
modulate = Color(0, 0, 0, 0.211765)
position = Vector2(1048.63, 261.25)
scale = Vector2(324.75, 413.5)
texture = SubResource("PlaceholderTexture2D_pa4af")

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 900.0
offset_top = 60.0
offset_right = 1200.0
offset_bottom = 460.0
theme = SubResource("Theme_d3c2y")
text = "spell description"
script = ExtResource("2_gohyj")

[node name="menu_button" type="Button" parent="."]
offset_left = 1184.0
offset_top = 640.0
offset_right = 1264.0
offset_bottom = 704.0
theme = SubResource("Theme_gais0")
text = "MENU"

[connection signal="pressed" from="Control/spell_select_buttons/spell1" to="." method="_on_spell_1_pressed"]
[connection signal="pressed" from="Control/spell_select_buttons/spell2" to="." method="_on_spell_2_pressed"]
[connection signal="pressed" from="Control/spell_select_buttons/spell3" to="." method="_on_spell_3_pressed"]
[connection signal="pressed" from="Control/spell_select_buttons/spell4" to="." method="_on_spell_4_pressed"]
[connection signal="pressed" from="Control/spell_select_buttons/spell5" to="." method="_on_spell_5_pressed"]
[connection signal="pressed" from="Control/spell_buttons/airburst" to="." method="_on_airburst_pressed"]
[connection signal="pressed" from="Control/spell_buttons/firestream" to="." method="_on_firestream_pressed"]
[connection signal="pressed" from="Control/spell_buttons/icespikefrombelow" to="." method="_on_icespikefrombelow_pressed"]
[connection signal="pressed" from="Control/spell_buttons/waterstream" to="." method="_on_waterstream_pressed"]
[connection signal="pressed" from="Control/spell_buttons/fireburst" to="." method="_on_fireburst_pressed"]
[connection signal="pressed" from="Control/spell_buttons/lightningstream" to="." method="_on_lightningstream_pressed"]
[connection signal="pressed" from="Control/spell_buttons/icespear" to="." method="_on_icespear_pressed"]
[connection signal="pressed" from="Control/spell_buttons/heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="Control/spell_buttons/explosion" to="." method="_on_explosion_pressed"]
[connection signal="pressed" from="Control/spell_buttons/earthspike" to="." method="_on_earthspike_pressed"]
[connection signal="pressed" from="Control/spell_buttons/earthwall" to="." method="_on_earthwall_pressed"]
[connection signal="pressed" from="menu_button" to="." method="_on_menu_button_pressed"]
